--- a/templates/device.html.twig
+++ b/templates/device.html.twig
@@ -3,27 +3,14 @@
 {% block title %}Device{% endblock %}
 
 {% block content %}
-    <div class="container-fluid d-flex flex-column justify-content-between align-items-center">
-            <div class="row w-100 mt-4">
+    <div class="container-fluid d-flex flex-column justify-content-between align-items-center vh-80 mt-5 mb-4">
+            <div class="row w-100 h-100 mt-4">
                 <div class="col-md-3">
                     {% include "device/_filter.html.twig" %}
-                    {#
-                    {{ form(searchform) }}
-                    #}
-                    <!-- Button to add device table -->
-                    {% if is_granted("ROLE_SUPER_ADMIN") %}
-                        <button id="floatingBtn" class="btn bg-orange btn-outline-orange  d-flex align-items-center justify-content-center" 
-                        style="border: none; border-radius: 50%; height: 4em; width: 4em; box-shadow: 2px 2px 3px #999;" 
-                        type="button"
-                        data-bs-target="#modal_upload"
-                        data-bs-toggle="modal">
-                            <i class="fa-solid fa-plus"></i>
-                        </button>
-                    {% endif %}
                 </div>
                 <!-- ===== DEVICE TABLE ===== -->
-                <div class="col-md-9">
-                    <h1 class="text-center mt-4 mb-4">Device</h1>
+                <div class="col-md-9 h-100">
+                    <h1 class="text-center mb-4">Device</h1>
                     {% for message in app.flashes('error') %}
                         <div class="p-3 my-2 rounded-2 alert alert-danger">{{ message }}</div>
                     {% endfor %}
@@ -34,15 +21,15 @@
                         <div class="p-3 my-2 rounded-2 alert alert-success">{{ message }}</div>
                     {% endfor %}
                     <div id="listDevice" class="w-100">
-                        <div id="listDeviceTable" class="table-responsive mt-4 mb-4 w-100">
+                        <div id="listDeviceTable" class="table-responsive w-100 h-100">
                             <table class="table table-striped table-bordered table-hover w-100" id="deviceTable" data-toggle="table" data-pagination="true" data-sort-name="sn" data-search="true">
                                 <thead class="w-100 align-middle">
                                     <tr class="h-100 w-100 align-middle" id="deviceTableTitle">
                                         <th scope="col"></th>
-                                        <th scope="col" class="h-100">
-                                            <div class="h-100 d-flex justify-content-between input-group no-wrap text-center align-items-center">
-                                                <span class="h-100 d-flex align-items-center">Serial Number</span>
-                                                <span class="btn btn-light text-dark h-100 p-1" type="button"><i class="h-100 fa-solid fa-arrow-up-a-z d-flex align-items-center" id="snSort" onclick=sortTable(1)></i></span>
+                                        <th scope="col" class="h-100 p-0">
+                                            <div class="h-100 d-flex justify-content-between input-group flex-nowrap text-center align-items-center ps-2">
+                                                <div class="text-nowrap">Serial Number</div>
+                                                <div class="btn btn-light text-dark h-100 p-1" style="border-radius: 0;" type="button"><i class="h-100 fa-solid fa-arrow-up-a-z d-flex align-items-center" id="snSort" onclick=sortTable(1)></i></div>
                                             </div>
                                         
                                         </th>
@@ -80,7 +67,7 @@
                                             {% if is_granted("ROLE_SAV")%}
                                                 {{ form_start(versionform) }}
                                                     <div class="input-group d-flex flex-nowrap">
-                                                    {{form_row(versionform.versionUpload, {attr: { style: 'border-right-style: none; border-right-radius: 0', class: 'flex-grow:1'}})}}
+                                                    {{form_row(versionform.versionUpload, {attr: { style: 'border-right-style: none; border-top-right-radius: 0; border-bottom-right-radius: 0; width: 3em;'}})}}
                                                     <button type="submit" class="text-center btn bg-orange btn-outline-orange mb-3" style="width: fit-content"><i class="fa-solid fa-check fa-2xs"></i></button>
                                                     </div>
                                                 {{ form_end(versionform) }}
@@ -93,8 +80,72 @@
                                         </th>
                                     </tr>
                                 </thead>
-                                
-                                <tbody class="w-100 overflow-scroll">
+                            </table>
+                        </div>
+                    </div>
+                    <div id="listDevice" class="w-100" style="height: 15em;">
+                        <div id="listDeviceTable" class="table-responsive w-100 h-100">
+                            <table class="table table-striped table-bordered table-hover w-100" id="deviceTable" data-toggle="table" data-pagination="true" data-sort-name="sn" data-search="true" style="height: 100px;">
+                                {#
+                                <thead class="w-100 align-middle">
+                                    <tr class="h-100 w-100 align-middle" id="deviceTableTitle">
+                                        <th scope="col"></th>
+                                        <th scope="col" class="h-100 p-0">
+                                            <div class="h-100 d-flex justify-content-between input-group flex-no-wrap text-center align-items-center ps-2">
+                                                Serial Number
+                                                <span class="btn btn-light text-dark h-100 p-1" style="border-radius: 0;" type="button"><i class="h-100 fa-solid fa-arrow-up-a-z d-flex align-items-center" id="snSort" onclick=sortTable(1)></i></span>
+                                            </div>
+                                        
+                                        </th>
+                                        <th scope="col" class="text-center">Device Family</th>
+                                        <th scope="col" class="text-center">Version</th>
+                                        <th scope="col" class="text-center">Upload Version</th>
+                                        <th scope="col" class="text-center">Download status</th>
+                                        {% if is_granted("ROLE_SAV") %}
+                                        <th scope="col" class="text-center">Log files</th>
+                                        {% endif %}
+                                        <th scope="col" class="text-center">Forced</th>
+                                        <th scope="col" class="text-center">Info</th>
+                                        <th scope="col" class="text-center">Comment</th>
+                                        
+                                    </tr>
+                                    <tr class="w-100 align-bottom">
+                                        <th class="text-center">
+                                        {% if is_granted("ROLE_SAV") %}
+                                                                        
+                                            {{ form_start(checkform) }}
+                                                <div class="row">
+                                                    <div class="col form-field form-inline">
+                                                        {{ form_row(checkform.check, {'id' : "checkbox_0"}) }}
+                                                    </div>
+                                                </div>
+                                            {{ form_end(checkform) }}
+                                            
+                                        {% endif %}
+
+                                        </th>
+                                        <th></th>
+                                        <th></th>
+                                        <th></th>
+                                        <th id='test_zone_0'>
+                                            {% if is_granted("ROLE_SAV")%}
+                                                {{ form_start(versionform) }}
+                                                    <div class="input-group d-flex flex-nowrap">
+                                                    {{form_row(versionform.versionUpload, {attr: { style: 'border-right-style: none; border-top-right-radius: 0; border-bottom-right-radius: 0; width: 3em;'}})}}
+                                                    <button type="submit" class="text-center btn bg-orange btn-outline-orange mb-3" style="width: fit-content"><i class="fa-solid fa-check fa-2xs"></i></button>
+                                                    </div>
+                                                {{ form_end(versionform) }}
+                                            {% endif %}
+                                        </th>
+                                        <th></th>
+                                        <th></th>
+                                        <th></th>
+                                        <th>
+                                        </th>
+                                    </tr>
+                                </thead>
+                                #}
+                                <tbody class="w-100 overflow-scroll" style="height: 15em">
 
                                     {% for device in devices %}
                                         <tr scope="row" class="w-100">
@@ -119,7 +170,8 @@
                                             
                                             <td class="text-center">
                                                 <div class="progress rounded-2 progress-small">
-                                                    <div class="progress-bar viride dark-1"></div>
+                                                    <div class="progress-bar viride dark-1" style="width: {{device.download}}%">{{ device.download > 0 ? device.download : '' }}
+                                                    </div>
                                                 </div>
                                             </td>
                                             {% if is_granted("ROLE_SAV")%}
@@ -135,7 +187,7 @@
                                             </td>
                                             <!--info-->
                                             <td class="text-center">
-                                                <a id="info_device_{{device.id}}" href="#" class="info_device btn rounded-1 press modal-trigger bg-orange" 
+                                                <a id="info_device_{{device.id}}" href="#" class="info_device btn rounded-1 press modal-trigger bg-orange btn-outline-orange" 
                                                 data-bs-target="#modal_info_{{device.id}}"
                                                 data-id="{{device.id}}"
                                                 data-title="{{device.sn}}"
@@ -143,7 +195,7 @@
                                                 <i class="fa-solid fa-circle-info"></i>
                                                 </a>
                                             </td>
-                                            <td class="text-break">
+                                            <td class="text-break overflow-hidden">
                                                 {{device.comment}}
                                             </td>
                                         </tr>
@@ -156,7 +208,19 @@
                     </div>
 
                     {{ knp_pagination_render(devices) }}
+                    
                 </div>
+
+                <!-- Button to add device table -->
+                {% if is_granted("ROLE_SUPER_ADMIN") %}
+                    <button id="floatingBtn" class="btn bg-orange btn-outline-orange  d-flex align-items-center justify-content-center" 
+                    style="border: none; border-radius: 50%; height: 4em; width: 4em; box-shadow: 2px 2px 3px #999;" 
+                    type="button"
+                    data-bs-target="#modal_upload"
+                    data-bs-toggle="modal">
+                        <i class="fa-solid fa-plus"></i>
+                    </button>
+                {% endif %}
                 <!-- ===== UPLOAD MODALS ===== -->
                 {% include 'device/upload_modals.html.twig' %}
 
@@ -190,10 +254,9 @@
 
 {% endblock %}
 
-{% block js %}
-
-{% endblock %}
 {% block javascripts %}
+
+    
     <script type="text/javascript">
     var path = "{{ asset('js/TCPClient2.php')}}";
     </script>
