--- a/templates/device.html.twig
+++ b/templates/device.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Device{% endblock %}
 
 {% block content %}
-    <div class="container-fluid d-flex flex-column justify-content-between align-items-center vh-80 mt-5 mb-4">
+    <div class="container-fluid d-flex flex-column justify-content-between align-items-center vh-80 mt-5 mb-5">
             <div class="row w-100 h-100 mt-4">
                 <div class="col-md-3">
                     {% include "device/_filter.html.twig" %}
@@ -20,6 +20,7 @@
                     {% for message in app.flashes('infoDevice') %}
                         <div class="p-3 my-2 rounded-2 alert alert-success">{{ message }}</div>
                     {% endfor %}
+                    <!--
                     <div id="listDevice" class="w-100">
                         <div id="listDeviceTable" class="table-responsive w-100 h-100">
                             <table class="table table-striped table-bordered table-hover w-100" id="deviceTable" data-toggle="table" data-pagination="true" data-sort-name="sn" data-search="true">
@@ -83,10 +84,11 @@
                             </table>
                         </div>
                     </div>
-                    <div id="listDevice" class="w-100" style="height: 15em;">
+                    -->
+                    <div id="listDevice" class="w-100">
                         <div id="listDeviceTable" class="table-responsive w-100 h-100">
                             <table class="table table-striped table-bordered table-hover w-100" id="deviceTable" data-toggle="table" data-pagination="true" data-sort-name="sn" data-search="true" style="height: 100px;">
-                                {#
+                                
                                 <thead class="w-100 align-middle">
                                     <tr class="h-100 w-100 align-middle" id="deviceTableTitle">
                                         <th scope="col"></th>
@@ -144,7 +146,7 @@
                                         </th>
                                     </tr>
                                 </thead>
-                                #}
+                                
                                 <tbody class="w-100 overflow-scroll" style="height: 15em">
 
                                     {% for device in devices %}
