--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -277,8 +277,8 @@ table.dataTable thead .sorting_desc_disabled:before {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   border: none;
-  box-shadow: 0px 0px 2px 2px rgba(172, 171, 171, 0.5058823529);
 }
 
 #uploadZone {
