--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -319,9 +319,10 @@ background: #eee;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     border: none;
     //box-shadow: 5px 5px 15px 5px #acabab;
-    box-shadow: 0px 0px 2px 2px #acabab81;
+    //box-shadow: 0px 0px 2px 2px #acabab81;
     //rgba(0,0,0,0.4)
 }
 
