--- a/templates/dashboard.html.twig
+++ b/templates/dashboard.html.twig
@@ -3,55 +3,82 @@
 {% block title %}Dashboard{% endblock %}
 
 {% block content %}
-<div style="" class="mt-5 mb-5 p-5">
-    <div class="container row">
-        <div class="col-md-4">
-            <div class="card dashboard-card">
-                <h3 class="card-header"><strong>Total Devices</strong></h3>
-                <canvas id="myChart" width="400" height="400" class="card-img-top"></canvas>
+    <div class="container row mt-5 mb-5 p-5">
+        <div class="col-md-6 mb-5">
+            <div class="card dashboard-card w-100" style="box-shadow: 0px 0px 2px 2px #acabab81;">
+                <h3 class="card-header w-100"><strong>Total Devices</strong></h3>
+                <canvas id="myChart" width="400" height="400" class="card-img-top pb-2"></canvas>
                 <div id="total_count" style="display: none;">{{countDevices}}</div>
             </div>
         </div>
 
-        <div class="col-md-8 d-flex flex-wrap align-items-center justify-content-evenly">
-            {% for deviceFamily in devicesFamily %}
-                <div class="col-md-4 m-md-2 card dashboard-card">
-                    <div class="card-header">
-                    <div class="device_family" id="{{deviceFamily}}"><strong>{{deviceFamily}}</strong></div>
-                    </div>
-                    <canvas id="myChart2_{{deviceFamily}}" class="card-img-top" width="50" height="50"></canvas>
-                    <div class="card-body">
-                        <div class="d-flex flex-nowrap justify-content-between align-items-center">
-                        <strong>Total</strong> : <div class="device_count" id="count_{{deviceFamily}}">{{deviceFamily.devices.count}}</div>
-                        </div>
-                        <div class="d-flex flex-nowrap justify-content-between">Count Version : <div class="device_count_version" id="count_version_{{deviceFamily}}"></div></div>
-                        {% for key, item in deviceArray %}
-                        {% if key == deviceFamily %}
-                            {{item}}
-                        {% endif %}
-                        {% endfor %}
-                    </div>
-
-                    <div class="card-footer">
-                        {% for key, items in softwareArray %}
-                        {% if key == deviceFamily %}
-                        <select class="form-select" name="" id="">
-                        {% for item in items %}
-                            <option value={{item}} class="select-version" data-devicefamily="{{deviceFamily}}">
-                            {{item}}
-                            </option>
-                        {% endfor %}
-                        </select>
-                        {% endif %}
-                        {% endfor %}
-                    </div>
-                </div>
+        <div class="col-md-6 mb-5 d-flex flex-wrap align-items-center justify-content-evenly">
             
-            {% endfor %}
+
+                <div id="carouselExampleIndicators" class="carousel carousel-dark slide w-100">
+                <!--
+                <div class="carousel-indicators">
+                    {% for deviceFamily in devicesFamily %}
+                    <button type="button" class="{{ (deviceFamily=="BACK4") ? 'active' : '' }}" data-bs-target="#carouselExampleIndicators" data-bs-slide-to={{ loop.index0 }} aria-label="Slide {{ loop.index }}"></button>
+                    {% endfor %}
+                </div>
+                -->
+                <div class="carousel-inner" style="box-shadow: 0px 0px 2px 2px #acabab81; border-radius: 5px;">
+                    {% for deviceFamily in devicesFamily %}
+                    <div class="carousel-item {{ (deviceFamily=="BACK4") ? 'active' : '' }}">
+                    <!--
+                    <img src="..." class="d-block w-100" alt="...">
+                    -->
+                        <div class="card dashboard-card">
+                            <div class="card-header w-100">
+                            <div class="device_family" id="{{deviceFamily}}"><strong>{{deviceFamily}}</strong></div>
+                            </div>
+                            <canvas id="myChart2_{{deviceFamily}}" class="card-img-top" width="50" height="50"></canvas>
+                            <div class="card-body">
+                                <div class="d-flex flex-nowrap justify-content-between align-items-center">
+                                <strong>Total</strong> : <div class="device_count" id="count_{{deviceFamily}}">{{deviceFamily.devices.count}}</div>
+                                </div>
+                                <div class="d-flex flex-nowrap justify-content-between" style="display: hidden;">Count Version : <div class="device_count_version" id="count_version_{{deviceFamily}}"></div></div>
+                                {% for key, item in deviceArray %}
+                                {% if key == deviceFamily %}
+                                    {{item}}
+                                {% endif %}
+                                {% endfor %}
+                            </div>
+
+                            <div class="card-footer w-100">
+                                {% for key, items in softwareArray %}
+                                {% if key == deviceFamily %}
+                                <select class="form-select w-50" name="" id="">
+                                {% for item in items %}
+                                    <option value={{item}} class="select-version" data-devicefamily="{{deviceFamily}}">
+                                    {{item}}
+                                    </option>
+                                {% endfor %}
+                                </select>
+                                {% endif %}
+                                {% endfor %}
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+                </div>
+
+
+
+                
+            
         </div>
     </div>
-
-</div>
 {% endblock %}
 
 {% block javascripts %}
