--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -277,8 +277,11 @@ table.dataTable thead .sorting_desc_disabled:before {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   border: none;
+}
+
+.carousel-control-next, .carousel-control-prev {
+  position: relative;
 }
 
 #uploadZone {
