--- a/templates/dashboard.html.twig
+++ b/templates/dashboard.html.twig
@@ -3,11 +3,13 @@
 {% block title %}Dashboard{% endblock %}
 
 {% block content %}
-    <div class="container row mt-5 mb-5 p-5">
+    <div class="container row mt-5 mb-5 p-5 d-flex align-items-stretch">
         <div class="col-md-6 mb-5">
-            <div class="card dashboard-card w-100" style="box-shadow: 0px 0px 2px 2px #acabab81;">
-                <h3 class="card-header w-100"><strong>Total Devices</strong></h3>
-                <canvas id="myChart" width="400" height="400" class="card-img-top pb-2"></canvas>
+            <div class="card dashboard-card h-100" style="box-shadow: 0px 0px 2px 2px #acabab81;">
+                <h3 class="card-header w-100"><strong style="text-transform: uppercase;">Total Devices</strong></h3>
+                <div class="card-body d-flex flex-column justify-content-center w-100">
+                    <canvas id="myChart"></canvas>
+                </div>
                 <div id="total_count" style="display: none;">{{countDevices}}</div>
             </div>
         </div>
@@ -30,15 +32,15 @@
                     <img src="..." class="d-block w-100" alt="...">
                     -->
                         <div class="card dashboard-card">
-                            <div class="card-header w-100">
-                            <div class="device_family" id="{{deviceFamily}}"><strong>{{deviceFamily}}</strong></div>
-                            </div>
-                            <canvas id="myChart2_{{deviceFamily}}" class="card-img-top" width="50" height="50"></canvas>
-                            <div class="card-body">
+                            <h3 class="card-header w-100 device_family" id="{{deviceFamily}}"><strong>{{deviceFamily}}</strong></h3>
+                            
+                            <div class="card-body d-flex flex-column justify-content-around w-100 h-100">
+                                <canvas id="myChart2_{{deviceFamily}}" class="mb-3"></canvas>
                                 <div class="d-flex flex-nowrap justify-content-between align-items-center">
-                                <strong>Total</strong> : <div class="device_count" id="count_{{deviceFamily}}">{{deviceFamily.devices.count}}</div>
+                                <strong>Total :</strong><div class="device_count" id="count_{{deviceFamily}}">{{deviceFamily.devices.count}}</div>
                                 </div>
-                                <div class="d-flex flex-nowrap justify-content-between" style="display: hidden;">Count Version : <div class="device_count_version" id="count_version_{{deviceFamily}}"></div></div>
+                                <div class="d-flex flex-nowrap justify-content-between" style="display: hidden;">Updated Devices : <div class="device_count_version" id="count_version_{{deviceFamily}}">0</div></div>
+                                <div class="d-flex flex-nowrap justify-content-between" style="display: hidden;">Not Updated Devices : <div class="device_count_version" id="count_not_{{deviceFamily}}">{{deviceFamily.devices.count}}</div></div>
                                 {% for key, item in deviceArray %}
                                 {% if key == deviceFamily %}
                                     {{item}}
@@ -46,10 +48,15 @@
                                 {% endfor %}
                             </div>
 
-                            <div class="card-footer w-100">
+                            <div class="card-footer w-100 d-flex justify-content-between">
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev" style="height: fit-content;">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
+                                </button>
                                 {% for key, items in softwareArray %}
                                 {% if key == deviceFamily %}
                                 <select class="form-select w-50" id="dashSelect_{{deviceFamily}}">
+                                <option value="" selected disabled hidden>Version</option>
                                 {% for item in items %}
                                     <option value={{item}} class="select-version" data-devicefamily="{{deviceFamily}}">
                                     {{item}}
@@ -58,19 +65,16 @@
                                 </select>
                                 {% endif %}
                                 {% endfor %}
+                                <button class="carousel-control-next h-100" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Next</span>
+                                </button>
                             </div>
                         </div>
                     </div>
                     {% endfor %}
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
+
                 </div>
 
 
@@ -78,6 +82,9 @@
                 
             
         </div>
+    </div>
+    <div class="container row">
+    stat device/week or month
     </div>
 {% endblock %}
 
